--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 <button onclick="submitOrder()">注文する</button>
 
 <script>
-    const GAS_URL = "https://script.google.com/macros/s/【あなたのGAS URL】/exec"; // ← ここに差し替えて！
+    const GAS_URL = "https://script.google.com/a/macros/ict.shimanet.ed.jp/s/AKfycbzM18EYzPdJv1pJgII4_O83Rd6sJk_3jubVxH94Tr7kKQABRzRKgKBdoNfgM18OXXFl/exec"; // ← ここに差し替えて！
 
     window.onload = function () {
-      liff.init({ liffId: "【あなたのLIFF ID】" })  // ← ここにLIFF IDを入力
+      liff.init({ liffId: "2007744957-90XbLAaG" })  // ← ここにLIFF IDを入力
         .then(() => {
         if (!liff.isLoggedIn()) {
             liff.login();
